# runa-engine

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-APACHE.md  LICENSE-MIT  LICENSE-MIT.md  README.md
crates/runa-asset/: Cargo.toml
crates/runa-asset/src/: image.rs  lib.rs  loader.rs
crates/runa-core/: Cargo.toml
crates/runa-core/src/: lib.rs  renderer.rs
crates/runa-editor/: Cargo.toml
crates/runa-math/: Cargo.toml
crates/runa-render/: Cargo.toml
crates/runa-render-api/: Cargo.toml
crates/runa-render-api/src/: lib.rs
crates/runa-render/src/: context.rs  lib.rs  renderer.rs  settings.rs
crates/runa_app/: Cargo.toml
crates/runa_app/src/: app.rs  lib.rs  runa_app.rs
crates/runa_asset/: Cargo.toml
crates/runa_asset/src/: app_icon.rs  lib.rs  loader.rs
crates/runa_core/: Cargo.toml
crates/runa_core/src/: console.rs  debug_renderer.rs  input.rs  lib.rs  registry.rs  renderer.rs
crates/runa_core/src/audio/: audio_engine.rs  mod.rs
crates/runa_core/src/components/: active_camera.rs  audio_listener.rs  audio_source.rs  camera.rs  camera2d.rs  collider2d.rs  component.rs  light.rs  mesh_renderer.rs  mod.rs  serialized_type_storage.rs  sorting.rs  sprite_animator.rs  sprite_renderer.rs  tilemap.rs  transform.rs  world_atmosphere.rs
crates/runa_core/src/components/ui/: mod.rs  ui_node.rs  ui_renderer.rs
crates/runa_core/src/ocs/: command.rs  context.rs  mod.rs  object.rs  script.rs  serializable_object.rs  world.rs
crates/runa_core/src/systems/: interaction_system.rs
crates/runa_editor/: Cargo.toml  build.rs
crates/runa_editor/src/: content_browser.rs  editor_app.rs  editor_camera.rs  editor_settings.rs  editor_textures.rs  inspector.rs  main.rs  preview.rs  style.rs
crates/runa_editor/src/editor_app/: app_handler.rs  helpers.rs  placeables.rs  project.rs  ui.rs  viewport.rs  world_ops.rs
crates/runa_engine/: Cargo.toml
crates/runa_engine/src/: engine.rs  lib.rs
crates/runa_engine/tests/: serialized_fields.rs  typed_archetypes.rs
crates/runa_hub/: Cargo.toml
crates/runa_hub/src/: main.rs
crates/runa_macros/: Cargo.toml
crates/runa_macros/src/: lib.rs
crates/runa_render/: Cargo.toml
crates/runa_render/src/: font.rs  lib.rs  renderer.rs
crates/runa_render/src/pipelines/: background_pipeline.rs  mesh_pipeline.rs  mod.rs  pipeline.rs  ui_pipeline.rs
crates/runa_render/src/resources/: mod.rs  texture.rs
crates/runa_render/src/shaders/: background.wgsl  blit.wgsl  mesh.wgsl  shader.wgsl  ui.wgsl
crates/runa_render/src/sprite/: pipeline.rs  shader.wgsl
crates/runa_render_api/: Cargo.toml
docs/: ui_feature_changes.md  ui_feature_notes.md
docs/architecture/: object-model.md  renderer-audit.md  renderer.md  runtime-and-editor-update.md
docs/tutorials/: README.md
examples/sandbox/: Cargo.toml
examples/sandbox/src/: app.rs  collider_demo.rs  main.rs  player.rs  tester1.rs  tester2.rs  tester3.rs  tilemap_tester.rs
examples/sandbox_3d/: Cargo.toml
examples/sandbox_soundtest/: Cargo.toml
examples/sandbox_ui/: Cargo.toml
templates/default/: Cargo.toml
(+41 files in other folders)
