[workspace]
members = [
    "crates/runa_core",
    "crates/runa_render",
    "crates/runa_asset",
    "crates/runa_math",
    "crates/runa_editor",
    "crates/runa_render_api",
    "examples/sandbox",
]

resolver = "2"

[workspace.dependencies]
winit = { version = "0.30.12" }
pollster = { version = "0.4" }
wgpu = { version = "28.0.0" }
