[package]
name = "runa_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
runa_asset = { path = "../runa_asset" }
runa_render = { path = "../runa_render" }
runa_render_api = { path = "../runa_render_api" }

glam.workspace = true
bytemuck = { version = "1.25.0", features = ["derive"] }
winit.workspace = true
rodio = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
ron = "0.12.0"
