[package]
name = "runa_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
serde = { version = "1.0", features = ["derive"] }
ron = "0.12.0"
image = { version = "0.25", features = ["png"] }
winit.workspace = true

runa_core = { path = "../runa_core" }
runa_render = { path = "../runa_render" }
runa_render_api = { path = "../runa_render_api" }
