[package]
name = "runa_editor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
egui = "0.33.3"
egui-winit = "0.33.3"
egui-wgpu = "0.33.3"
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true

runa_core = { path = "../runa_core" }
runa_render = { path = "../runa_render" }
runa_render_api = { path = "../runa_render_api" }
runa_asset = { path = "../runa_asset" }
