[package]
name = "runa_hub"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33.3", features = ["wgpu"] }
egui_extras = { version = "0.33.3", features = ["image"] }
egui = "0.33.3"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
tokio = { version = "1.0", features = ["full"] }
image = { version = "0.25", features = ["png"] }
dirs = "5.0"
rfd = "0.14"
