[package]
name = "runa_render"
version = "0.1.0"
edition = "2021"

[dependencies]
runa_asset = { path = "../runa_asset" }
runa_render_api = { path = "../runa_render_api" }
winit.workspace = true
pollster.workspace = true
wgpu.workspace = true
glam.workspace = true
bytemuck = { version = "1.14", features = ["derive"] }
